Add select input for subject in new exam creator

--- a/src/assets/sass/size.scss
+++ b/src/assets/sass/size.scss
@@ -35,3 +35,15 @@
 .line-64 {
   line-height: 64px;
 }
+
+.h-200 {
+  height: 200px;
+}
+
+.p-80-20 {
+  padding: 80px 20px;
+}
+
+.m-20 {
+  margin: 20px;
+}
