--- a/src/app/exams/new/exams.new.html
+++ b/src/app/exams/new/exams.new.html
@@ -1,9 +1,36 @@
 <div class='ng-modal grey-text text-darken-3'>
     <div class='ng-modal-overlay row' ng-click='$ctrl.onCancel()'></div>
     <div class='ng-modal-dialog row col s4 offset-s4'>
-        <div class="p-20">
-            <h5 class="header center-align">Add new Exam</h5>
 
+        <div class="p-80-20" ng-style="{'background': $ctrl.exam.subject.color}">
+
+            <div class="m-t-30">
+                <ui-select ng-model="$ctrl.exam.subject" class="input-h-1 white-text darken-2"
+                            style="text-align: center">
+                    <ui-select-match style="text-align: center"
+                                     placeholder="{{'EXAMS.NEW.SUBJECT_PLACEHOLDER' | translate}}">
+                        {{$select.selected.label}}
+                    </ui-select-match>
+                    <ui-select-choices repeat="subject in ($ctrl.subjects | filter: $select.search) track by subject.id">
+                        <div class="p-20 p-1-1">{{subject.label}}</div>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+
+        <div class="m-20">
+            <text-input label="{{'EXAMS.NEW.INPUT_LABEL' | translate}}" model="$ctrl.exam.info"></text-input>
+        </div>
+        <div class="m-20">
+            <input type="date" class="datepicker">
+        </div>
+
+        <div class="m-b-30 p-b-10">
+            <p class="waves-effect waves-teal btn-flat right bold p-1-2 green-text text-darken-2" ng-class="$ctrl.exam.info ? '' : 'disabled'"
+               ng-click="$ctrl.onOk()" translate="SUBJECTS.NEW.BUTTON.SUBMIT"></p>
+
+            <p class="waves-effect waves-teal btn-flat right bold p-1-2 red-text text-darken-2 p-enabled"
+               ng-click="$ctrl.onCancel()" translate="SUBJECTS.NEW.BUTTON.CANCEL"></p>
         </div>
     </div>
 </div>
