--- a/src/app/stats/stats.html
+++ b/src/app/stats/stats.html
@@ -2,12 +2,12 @@
     <div class="col s4 offset-s4">
         <span>Selected: {name: {{$ctrl.selectedItem.name}}, id: {{$ctrl.selectedItem.id}} }</span>
 
-        <ui-select ng-model="$ctrl.selectedItem" class="input-h-1">
-            <ui-select-match>
-                <span ng-bind="$select.selected.name"></span>
+        <ui-select ng-model="$ctrl.selectedItem" class="input-h-1" class="p-1-2 white-text">
+            <ui-select-match class="p-1-2 white-text">
+                <span ng-bind="$select.selected.name" class="p-1-2 white-text"></span>
             </ui-select-match>
             <ui-select-choices repeat="item in ($ctrl.itemArray | filter: $select.search) track by item.id">
-                <div>{{item.name}}</div>
+                <div class="p-1-2">{{item.name}}</div>
             </ui-select-choices>
         </ui-select>
     </div>
