Create basic datepicker input component

--- a/src/app/stats/stats.html
+++ b/src/app/stats/stats.html
@@ -1,4 +1,5 @@
 <div class="row">
     <div>Dupa</div>
-    <div id="calendar" style="width: 30px; height: 30px; background: blue" ng-click="$ctrl.openCalendar()">X</div>
+    <datepicker></datepicker>
+    <input type="date">
 </div>
