--- a/src/app/exams/new/exams.new.html
+++ b/src/app/exams/new/exams.new.html
@@ -14,7 +14,7 @@
             <text-input label="{{'EXAMS.NEW.INPUT_LABEL' | translate}}" model="$ctrl.exam.info"></text-input>
         </div>
         <div class="m-20">
-            <datepicker></datepicker>
+            <datepicker placeholder="{{'EXAMS.NEW.CALENDAR_LABEL' | translate}}"></datepicker>
         </div>
 
         <div class="m-b-30 p-b-10">
