Add grudus-timepicker for material timepicker

--- a/src/app/exams/new/exams.new.html
+++ b/src/app/exams/new/exams.new.html
@@ -16,6 +16,9 @@
         <div class="m-20">
             <datepicker placeholder="{{'EXAMS.NEW.CALENDAR_LABEL' | translate}}"></datepicker>
         </div>
+        <div class="m-20">
+            <timepicker placeholder="{{'EXAMS.NEW.CLOCK_LABEL' | translate}}"></timepicker>
+        </div>
 
         <div class="m-b-30 p-b-10">
             <p class="waves-effect waves-teal btn-flat right bold p-1-2 green-text text-darken-2" ng-class="$ctrl.exam.info ? '' : 'disabled'"
