Prepare exam saving

--- a/src/app/exams/exams.html
+++ b/src/app/exams/exams.html
@@ -26,5 +26,5 @@
     </ul>
 
     <fab on-click="$ctrl.showModal = true"></fab>
-    <new-exam ng-show="$ctrl.showModal" on-cancel="$ctrl.showModal = false" on-submit="$ctrl.dupa"></new-exam>
+    <new-exam ng-show="$ctrl.showModal" on-cancel="$ctrl.showModal = false" on-submit="$ctrl.addNewExam(exam)"></new-exam>
 </div>
