--- a/src/app/utils/timepicker/timepicker.html
+++ b/src/app/utils/timepicker/timepicker.html
@@ -1,3 +1,3 @@
 <div class='row'>
-    <text-input ng-click="$ctrl.Timepicker.showPicker()" label="{{$ctrl.placeholder}}" model="$ctrl.timeDisplayed" prevent-default="true"></text-input>
+    <text-input ng-click="$ctrl.showPicker()" label="{{$ctrl.placeholder}}" model="$ctrl.timeDisplayed" prevent-default="true"></text-input>
 </div>
