--- a/src/app/exams/exams.html
+++ b/src/app/exams/exams.html
@@ -2,10 +2,10 @@
     <h3 class="center-align m-t-100 grey-text text-darken-3" ng-show="!$ctrl.examsPerDay" translate="EXAMS.EMPTY"></h3>
 
     <ul class="m-t-100">
-        <li ng-repeat="(date, examsPerDay) in $ctrl.examsPerDay" class="row grey-text text-darken-3">
+        <li ng-repeat="examPerDay in $ctrl.examsPerDay" class="row grey-text text-darken-3">
             <section class="p-20 col s4 offset-s4">
-                <h6 class="m-b-15">{{date}}</h6>
-                <ul ng-repeat="exam in examsPerDay">
+                <h6 class="m-b-15">{{examPerDay.date}}</h6>
+                <ul ng-repeat="exam in examPerDay.exams">
                     <div class="p-20 card valign-wrapper">
                         <div class="circle size-52 line-52 center-align left-align white-text text-darken-2 p-1-2 thin"
                              ng-style="{'background': exam.subject.color}">
