Remove flickering items before load

--- a/src/app/user/user.html
+++ b/src/app/user/user.html
@@ -1,4 +1,4 @@
-<div class="row m-t-100" ng-show="!$ctrl.loading">
+<div class="row m-t-100">
     <div class="col s4 offset-s4">
         <div class="card center-align center-block hoverable p-20  bor-rad text">
             <h5 class="p-b-10" ng-bind="$ctrl.user.username"></h5>
@@ -7,4 +7,3 @@
         </div>
     </div>
 </div>
-<cube-loading loading="$ctrl.loading"></cube-loading>
