--- a/src/app/animation/cube-loading/cube.loading.html
+++ b/src/app/animation/cube-loading/cube.loading.html
@@ -1,4 +1,4 @@
-<section class="sk-cube-grid center-fixed" ng-style="{'display': $ctrl.loading ? 'block' : 'none'}">
+<section class="sk-cube-grid" ng-style="{'display': $ctrl.loading ? 'block' : 'none'}">
     <div class="sk-cube sk-cube1"></div>
     <div class="sk-cube sk-cube2"></div>
     <div class="sk-cube sk-cube3"></div>
