--- a/src/app/subjects/subjects.html
+++ b/src/app/subjects/subjects.html
@@ -1,5 +1,7 @@
 <div ui-view="">
-    <h3 class="center-align m-t-100 grey-text text-darken-3" ng-show="!loading && !$ctrl.subjects.length" translate="SUBJECTS.EMPTY"></h3>
+    <h3 class="center-align m-t-100 grey-text text-darken-3"
+        ng-show="!($ctrl.loading || $ctrl.subjects.length)" translate="SUBJECTS.EMPTY"></h3>
+
     <div ng-show="$ctrl.subjects.length" class="row m-t-100">
         <ul class="row">
             <div class="row col offset-s2 s8">
@@ -22,5 +24,4 @@
 
     <fab on-click="$ctrl.showModal = true"></fab>
     <new-subject ng-show="$ctrl.showModal" on-cancel="$ctrl.showModal = false" on-submit="$ctrl.addNewSubject(subject)"></new-subject>
-    <cube-loading loading="$ctrl.loading"></cube-loading>
 </div>
