--- a/src/assets/sass/spaces.scss
+++ b/src/assets/sass/spaces.scss
@@ -43,6 +43,13 @@
   padding: 20px;
 }
 
+.p-10 {
+  padding: 10px;
+}
+.p-2 {
+  padding: 2px;
+}
+
 .p-b-10 {
   padding-bottom: 10px;
 }
@@ -51,3 +58,6 @@
   padding: 50px 0;
 }
 
+.m-auto {
+  margin: 0 auto;
+}
