--- a/src/assets/sass/utils.scss
+++ b/src/assets/sass/utils.scss
@@ -24,7 +24,6 @@
   }
 }
 
-
 .selected-color {
   border: 4px solid #689f38;
 }
@@ -49,7 +48,6 @@
   left: 50%;
   margin-left: -27px;
 }
-
 
 .bold {
   font-weight: 700;
@@ -76,4 +74,32 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.left-switcher {
+  @extend .switcher;
+  border-radius: 30px 0 0 30px;
+ }
+
+.switcher {
+  background: #fff;
+  padding: 7px !important;
+  &:hover {
+    margin-top: -1px;
+    cursor: pointer;
+  }
+  &.active {
+    background: #F44336;
+    color: white;
+  }
+
+}
+
+.right-switcher {
+  @extend .switcher;
+  border-radius: 0 30px 30px 0;
+}
+
+.bor-rad-30 {
+  border-radius: 30px;
 }
