--- a/src/app/exams/exams.html
+++ b/src/app/exams/exams.html
@@ -1,37 +1,14 @@
 <div ng-cloak>
-    <h3 class="center-align m-t-100 grey-text text-darken-3"
-        ng-show="!($ctrl.loading || $ctrl.examsPerDay.length)" translate="EXAMS.EMPTY"></h3>
 
-    <section class="m-t-100">
+    <section class="m-t-20">
         <div class="center-align p-2 row m-w-300 bor-rad-30 m-auto" style="background-color: rgba(244, 67, 54, 0.1)">
-            <span class="center-align col s6 left-switcher active">FUTURE</span>
-            <span class="center-align col s6 right-switcher">PAST</span>
+            <span class="center-align col s6 left-switcher" ui-sref="app.exams.upcoming" ui-sref-active="active">FUTURE</span>
+            <span class="center-align col s6 right-switcher" ui-sref="app.exams.past" ui-sref-active="active">PAST</span>
         </div>
     </section>
 
-    <ul class="m-t-100">
-        <li ng-repeat="examPerDay in $ctrl.examsPerDay" class="row grey-text text-darken-3">
-            <section class="p-20 col s4 offset-s4">
-                <h6 class="m-b-15">{{examPerDay.date}}</h6>
-                <ul ng-repeat="exam in examPerDay.exams">
-                    <div class="p-20 card valign-wrapper">
-                        <div class="circle size-52 line-52 center-align left-align white-text text-darken-2 p-1-2 thin"
-                             ng-style="{'background': exam.subject.color}">
-                            {{exam.subject.label[0]}}
-                        </div>
-                        <section class=" m-l-25">
-                            <div>
-                                <p class="p-1-2 bold">{{exam.subject.label}}</p>
-                            </div>
-                            <div>
-                                {{exam.info}}
-                            </div>
-                        </section>
-                    </div>
-                </ul>
-            </section>
-        </li>
-    </ul>
+
+    <div ui-view></div>
 
     <fab on-click="$ctrl.showModal = true"></fab>
     <new-exam ng-show="$ctrl.showModal" on-cancel="$ctrl.showModal = false"
