--- a/src/assets/sass/utils.scss
+++ b/src/assets/sass/utils.scss
@@ -76,10 +76,6 @@
   transform: translate(-50%, -50%);
 }
 
-.left-switcher {
-  @extend .switcher;
-  border-radius: 30px 0 0 30px;
- }
 
 .switcher {
   background: #fff;
@@ -87,6 +83,7 @@
   &:hover {
     margin-top: -1px;
     cursor: pointer;
+    font-weight: 400;
   }
   &.active {
     background: #F44336;
@@ -95,7 +92,13 @@
 
 }
 
+.left-switcher {
+  @extend .switcher;
+  border-radius: 30px 0 0 30px;
+  border-right: 1px solid rgba(#F44336, .1);
+}
 .right-switcher {
+  border-left: 1px solid rgba(#F44336, .1);
   @extend .switcher;
   border-radius: 0 30px 30px 0;
 }
