Add translation and scss variable

--- a/src/app/exams/exams.html
+++ b/src/app/exams/exams.html
@@ -2,8 +2,10 @@
 
     <section class="m-t-20">
         <div class="center-align p-2 row m-w-300 bor-rad-30 m-auto" style="background-color: rgba(244, 67, 54, 0.1)">
-            <span class="center-align col s6 left-switcher" ui-sref="app.exams.upcoming" ui-sref-active="active">FUTURE</span>
-            <span class="center-align col s6 right-switcher" ui-sref="app.exams.past" ui-sref-active="active">PAST</span>
+            <span class="center-align col s6 left-switcher" ui-sref="app.exams.upcoming" ui-sref-active="active"
+            translate="EXAMS.UPCOMING"></span>
+            <span class="center-align col s6 right-switcher" ui-sref="app.exams.past" ui-sref-active="active"
+            translate="EXAMS.PAST"></span>
         </div>
     </section>
 
