--- a/src/assets/sass/utils.scss
+++ b/src/assets/sass/utils.scss
@@ -1,3 +1,5 @@
+$nice-red: #f44336;
+
 .bor-rad {
   border-radius: 10px;
 }
@@ -29,7 +31,7 @@
 }
 
 .input-error {
-  color: #F44336;
+  color: $nice-red;
   float: left;
   margin-top: -20px;
   font-size: 0.8em;
@@ -86,7 +88,7 @@
     font-weight: 400;
   }
   &.active {
-    background: #F44336;
+    background: $nice-red;
     color: white;
   }
 
@@ -95,10 +97,10 @@
 .left-switcher {
   @extend .switcher;
   border-radius: 30px 0 0 30px;
-  border-right: 1px solid rgba(#F44336, .1);
+  border-right: 1px solid rgba($nice-red, .1);
 }
 .right-switcher {
-  border-left: 1px solid rgba(#F44336, .1);
+  border-left: 1px solid rgba($nice-red, .1);
   @extend .switcher;
   border-radius: 0 30px 30px 0;
 }
