Get upcoming exams from server

--- a/src/app/exams/past/exams.past.html
+++ b/src/app/exams/past/exams.past.html
@@ -1,1 +1,2 @@
-<div>DUPA</div>
+<h3 class="center-align m-t-100 grey-text text-darken-3">
+    Sorry, this feature is unavailable in your country</h3>
