--- a/src/assets/sass/utils.scss
+++ b/src/assets/sass/utils.scss
@@ -105,6 +105,25 @@ $nice-red: #f44336;
   border-radius: 0 30px 30px 0;
 }
 
+.notificator {
+  @extend .absolute;
+  @extend .size-28;
+  @extend .circle;
+  top: -14px;
+  right: 14px;
+  line-height: 28px;
+  color: white;
+  background: #689f38;
+}
+
 .bor-rad-30 {
   border-radius: 30px;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
 }
