--- a/src/assets/sass/animations.scss
+++ b/src/assets/sass/animations.scss
@@ -19,6 +19,19 @@
   }
 }
 
+@keyframes showUp {
+  0% {
+    transform: scale(0, 0);
+  }
+
+  90% {
+    transform: scale(1.1, 1.1);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
 .pulse-on-hover {
   transition: transform .1s ease-in-out;
 }
@@ -26,5 +39,11 @@
 .pulse-on-hover:hover {
   animation: pulse;
   animation-duration: 0.5s;
+  transition: transform .1s ease-in-out;
+}
+
+.showUp {
+  animation: showUp;
+  animation-duration: 0.2s;
   transition: transform .1s ease-in-out;
 }
