--- a/src/app/colors/colors.choice.html
+++ b/src/app/colors/colors.choice.html
@@ -5,7 +5,7 @@
 <ul class="row p-20">
     <li ng-repeat="color in $ctrl.colors">
         <div class="col s3 m-b-10">
-            <div class="circle size-64 center-block pointer" ng-style="{'background': color}"
+            <div class="circle size-64 center-block pointer showUp" ng-style="{'background': color}"
                  ng-class="$ctrl.colorIndex == $index ? 'selected-color' : ''"
                  ng-click="$ctrl.selectColor($index)"></div>
         </div>
