--- a/src/app/subjects/subjects.html
+++ b/src/app/subjects/subjects.html
@@ -1,4 +1,4 @@
-<div ui-view="">
+<div ui-view="" ng-cloak="">
     <h3 class="center-align m-t-100 grey-text text-darken-3"
         ng-show="!($ctrl.loading || $ctrl.subjects.length)" translate="SUBJECTS.EMPTY"></h3>
 
