--- a/src/app/utils/dropdown/dropdown.html
+++ b/src/app/utils/dropdown/dropdown.html
@@ -2,7 +2,7 @@
            style="text-align: center">
     <ui-select-match style="text-align: center"
                      placeholder="{{$ctrl.placeholder}}">
-        {{$select.selected[$ctrl.label]}}
+        {{$select.selected[$ctrl.label] | truncate: 20}}
     </ui-select-match>
     <ui-select-choices repeat="item in ($ctrl.items | filter: $select.search) track by item.id">
         <div class="p-20 p-1-1">{{item[$ctrl.label]}}</div>
