--- a/src/assets/sass/animations.scss
+++ b/src/assets/sass/animations.scss
@@ -32,6 +32,24 @@
   }
 }
 
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .pulse-on-hover {
   transition: transform .1s ease-in-out;
 }
