Create UI for selecting grade in subject details view

--- a/src/app/subjects/details/subject.details.html
+++ b/src/app/subjects/details/subject.details.html
@@ -22,4 +22,8 @@
 
     <modal-confirmation show="$ctrl.modalShown" message="{{'SUBJECTS.DETAILS.DELETE.MESSAGE' | translate}}"
                         on-submit="$ctrl.deleteSubject()" title="{{'SUBJECTS.DETAILS.DELETE.TITLE' | translate}}"></modal-confirmation>
+
+
+<exams-without-grade class="col s6 offset-s3 m-t-100" exams="$ctrl.examsWithoutGrade "></exams-without-grade>
+
 </div>
