--- a/src/assets/sass/animations.scss
+++ b/src/assets/sass/animations.scss
@@ -65,3 +65,8 @@
   animation-duration: 0.2s;
   transition: transform .1s ease-in-out;
 }
+
+.height-animation {
+  overflow: hidden;
+  transition: height .4s;
+}
