--- a/src/assets/sass/utils.scss
+++ b/src/assets/sass/utils.scss
@@ -1,4 +1,19 @@
 $nice-red: #f44336;
+$primary: #689f38;
+
+.primary {
+  background: $primary !important;
+  &:hover {
+    background: darken($primary, 25%) !important;
+  }
+}
+
+.secondary {
+  background: $nice-red !important;
+  &:hover {
+    background: darken($nice-red, 25%) !important;
+  }
+}
 
 .bor-rad {
   border-radius: 10px;
@@ -27,7 +42,7 @@ $nice-red: #f44336;
 }
 
 .selected-color {
-  border: 4px solid #689f38;
+  border: 4px solid $primary;
 }
 
 .input-error {
@@ -78,20 +93,24 @@ $nice-red: #f44336;
   transform: translate(-50%, -50%);
 }
 
+.up-hover {
+  &:hover {
+    margin-top: -1px;
+    cursor: pointer;
+  }
+}
 
 .switcher {
   background: #fff;
   padding: 7px !important;
   &:hover {
     margin-top: -1px;
-    cursor: pointer;
-    font-weight: 400;
+    @extend .up-hover;
   }
   &.active {
     background: $nice-red;
     color: white;
   }
-
 }
 
 .left-switcher {
@@ -99,6 +118,7 @@ $nice-red: #f44336;
   border-radius: 30px 0 0 30px;
   border-right: 1px solid rgba($nice-red, .1);
 }
+
 .right-switcher {
   border-left: 1px solid rgba($nice-red, .1);
   @extend .switcher;
@@ -113,7 +133,7 @@ $nice-red: #f44336;
   right: 14px;
   line-height: 28px;
   color: white;
-  background: #689f38;
+  background: $primary;
 
   &:hover {
     cursor: default;
