--- a/src/app/exams/without-grade/single/exams.without-grade.single.html
+++ b/src/app/exams/without-grade/single/exams.without-grade.single.html
@@ -7,6 +7,7 @@
     <ul>
         <li ng-repeat="grade in $ctrl.grades" class="col s4">
             <span class="dupa p-10 card white-text pointer center-align center-block p-1-2"
+                  ng-click="$ctrl.selectGrade({grade: grade})"
                   ng-class="grade.value % 1 === 0 ? 'primary': 'secondary'"
                   ng-hide="grade.hide">
                 {{grade.label}}
