--- a/src/app/exams/without-grade/exams.without-grade.html
+++ b/src/app/exams/without-grade/exams.without-grade.html
@@ -1,8 +1,10 @@
-<h4>Without grade</h4>
-<section class="row m-t-30">
-    <ul>
-        <li ng-repeat="exam in $ctrl.exams" class="col s6">
-            <exam-without-grade exam="exam" select-grade="$ctrl.selectGrade(grade, exam)"></exam-without-grade>
-        </li>
-    </ul>
-</section>
+<aside ng-if="$ctrl.exams.length">
+    <h4>Without grade</h4>
+    <section class="row m-t-30">
+        <ul>
+            <li ng-repeat="exam in $ctrl.exams" class="col s6">
+                <exam-without-grade exam="exam" select-grade="$ctrl.selectGrade(grade, exam)"></exam-without-grade>
+            </li>
+        </ul>
+    </section>
+</aside>
