--- a/src/app/subjects/details/subject.details.html
+++ b/src/app/subjects/details/subject.details.html
@@ -1,12 +1,19 @@
 <section class="row m-t-30">
 
-    <edit-subject subject="$ctrl.subject" on-submit="$ctrl.update()" on-delete="$ctrl.modalShown = true"></edit-subject>
+    <edit-subject subject="$ctrl.subject"
+                  on-submit="$ctrl.update()"
+                  on-delete="$ctrl.modalShown = true">
+    </edit-subject>
 
-    <exams-without-grade class="col s6 offset-s3 m-t-100" exams="$ctrl.examsWithoutGrade "></exams-without-grade>
+    <exams-without-grade class="col s6 offset-s3 m-t-100"
+                         exams="$ctrl.examsWithoutGrade ">
+    </exams-without-grade>
 
 
-    <modal-confirmation show="$ctrl.modalShown" message="{{'SUBJECTS.DETAILS.DELETE.MESSAGE' | translate}}"
+    <modal-confirmation show="$ctrl.modalShown"
+                        message="{{'SUBJECTS.DETAILS.DELETE.MESSAGE' | translate}}"
                         on-submit="$ctrl.deleteSubject()"
-                        title="{{'SUBJECTS.DETAILS.DELETE.TITLE' | translate}}"></modal-confirmation>
+                        title="{{'SUBJECTS.DETAILS.DELETE.TITLE' | translate}}">
+    </modal-confirmation>
 
 </section>
