Add average grades stats

--- a/src/app/stats/stats.html
+++ b/src/app/stats/stats.html
@@ -1,2 +1,3 @@
-<h3 class="center-align m-t-100 grey-text text-darken-3">
-    Sorry, this feature is unavailable in your country</h3>
+<aside class="row">
+    <average-stats class="m-t-30 col s4 offset-s4"></average-stats>
+</aside>
