Create basic 404 and 403 error pages

--- a/src/app/error/error.html
+++ b/src/app/error/error.html
@@ -1,4 +1,6 @@
-<div>
-    <h4 class="center-align"> {{'ERROR.UNEXPECTED' | translate}}
-        <a href="#" ui-sref="auth.login">{{'ERROR.UNEXPECTED_LINK' | translate}}</a></h4>
+<div ui-view="">
+    <div>
+        <h4 class="center-align"> {{'ERROR.UNEXPECTED' | translate}}
+            <a href="#" ui-sref="auth.login">{{'ERROR.UNEXPECTED_LINK' | translate}}</a></h4>
+    </div>
 </div>
