Add link with redirect to main page on error

--- a/src/app/error/forbidden/error.forbidden.html
+++ b/src/app/error/forbidden/error.forbidden.html
@@ -1,4 +1,8 @@
 <div>
     <h1 class="center-align">403</h1>
     <h4 class="center-align"> {{'ERROR.FORBIDDEN' | translate}} </h4>
+
+    <h4 class="center-align m-t-100">
+        <a ui-sref="app.user">{{'GO_MAIN' | translate}}</a>
+    </h4>
 </div>
