--- a/src/app/error/not-found/error.not-found.html
+++ b/src/app/error/not-found/error.not-found.html
@@ -1,4 +1,8 @@
 <div>
     <h1 class="center-align">404</h1>
     <h4 class="center-align"> {{'ERROR.NOT_FOUND' | translate}} </h4>
+
+    <h4 class="center-align m-t-100">
+        <a ui-sref="app.user">{{'GO_MAIN' | translate}}</a>
+    </h4>
 </div>
