--- a/src/app/subjects/details/subject.details.html
+++ b/src/app/subjects/details/subject.details.html
@@ -10,7 +10,7 @@
                          exams="$ctrl.examsWithoutGrade">
     </exams-without-grade>
 
-    <average-stats class="col s3 offset-s3 m-t-100 card" style="margin-top: 100px"
+    <average-stats ng-if="$ctrl.subject.id" class="col s3 offset-s3 m-t-100 card" style="margin-top: 100px"
         subject-id="$ctrl.subject.id">
 
     </average-stats>
