--- a/src/assets/sass/animations.scss
+++ b/src/assets/sass/animations.scss
@@ -1,3 +1,5 @@
+@import "utils";
+
 @keyframes pulse {
   0% {
     transform: scale(1.1, 1.1);
@@ -47,6 +49,22 @@
   }
   to {
     opacity: 0;
+  }
+}
+
+@keyframes toRed {
+  100% {
+    color: $nice-red;
+  }
+}
+
+.red-on-hover {
+  transition: transform .1s ease-in-out;
+
+  &:hover {
+    animation: toRed forwards;
+    animation-duration: 0.6s;
+    transition: transform .1s ease-in-out;
   }
 }
 
